Sd 2257 show only significant validations for booking (#407)