@@ -2,7 +2,11 @@ package org.dcsa.conformance.standards.booking.checks;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import java.util.*;
+
+import org.dcsa.conformance.core.check.ConformanceCheckResult;
+import org.dcsa.conformance.core.check.ConformanceError;
 import org.dcsa.conformance.core.traffic.HttpMessageType;
+import org.dcsa.conformance.core.util.JsonUtil;
 import org.dcsa.conformance.standards.booking.party.BookingCancellationState;
 import org.dcsa.conformance.standards.booking.party.BookingRole;
 import org.dcsa.conformance.standards.booking.party.BookingState;
@@ -52,78 +56,88 @@ abstract class AbstractCarrierPayloadConformanceCheck extends PayloadContentConf
     this.amendedContent = amendedContent;
   }
 
-  protected Set<String> ensureCarrierBookingReferenceCompliance(JsonNode responsePayload) {
+  protected ConformanceCheckResult ensureCarrierBookingReferenceCompliance(JsonNode responsePayload) {
     if (BOOKING_STATES_WHERE_CBR_IS_OPTIONAL.contains(expectedBookingStatus)) {
-      return Collections.emptySet();
+      return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.irrelevant()));
     }
     if (responsePayload.path("carrierBookingReference").isMissingNode()) {
-      return Set.of("The 'carrierBookingReference' field was missing");
+      return ConformanceCheckResult.simple(Set.of("The 'carrierBookingReference' field was missing"));
     }
-    return Collections.emptySet();
+    return ConformanceCheckResult.simple(Collections.emptySet());
   }
 
-  protected Set<String> ensureBookingStatusIsCorrect(JsonNode responsePayload) {
+  protected ConformanceCheckResult ensureBookingStatusIsCorrect(JsonNode responsePayload) {
     String actualState = responsePayload.path("bookingStatus").asText(null);
     String expectedState = expectedBookingStatus.name();
     if (Objects.equals(actualState, expectedState)) {
-      return Collections.emptySet();
+      return ConformanceCheckResult.simple(Collections.emptySet());
     }
-    return Set.of("Expected bookingStatus '%s' but found '%s'"
-      .formatted(expectedState, Objects.requireNonNullElse(actualState, UNSET_MARKER)));
+    return ConformanceCheckResult.simple(Set.of("Expected bookingStatus '%s' but found '%s'"
+      .formatted(expectedState, Objects.requireNonNullElse(actualState, UNSET_MARKER))));
   }
 
-  protected Set<String> ensureAmendedBookingStatusIsCorrect(JsonNode responsePayload) {
+  protected ConformanceCheckResult ensureAmendedBookingStatusIsCorrect(JsonNode responsePayload) {
     String actualState = responsePayload.path("amendedBookingStatus").asText(null);
     String expectedState = expectedAmendedBookingStatus != null ? expectedAmendedBookingStatus.name() : null;
-    if (Objects.equals(actualState, expectedState)) {
-      return Collections.emptySet();
+    if (expectedState == null && actualState == null) {
+      return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.irrelevant()));
     }
-    return Set.of("Expected amendedBookingStatus '%s' but found '%s'"
+    if (Objects.equals(actualState, expectedState)) {
+      return ConformanceCheckResult.simple(Collections.emptySet());
+    }
+    return ConformanceCheckResult.simple(Set.of("Expected amendedBookingStatus '%s' but found '%s'"
       .formatted(
         Objects.requireNonNullElse(expectedState, UNSET_MARKER),
-        Objects.requireNonNullElse(actualState, UNSET_MARKER)));
+        Objects.requireNonNullElse(actualState, UNSET_MARKER))));
   }
 
-  protected Set<String> ensureBookingCancellationStatusIsCorrect(JsonNode responsePayload) {
+  protected ConformanceCheckResult ensureBookingCancellationStatusIsCorrect(JsonNode responsePayload) {
     String actualState = responsePayload.path("bookingCancellationStatus").asText(null);
     String expectedState = expectedBookingCancellationStatus != null ? expectedBookingCancellationStatus.name() : null;
-    if (Objects.equals(actualState, expectedState)) {
-      return Collections.emptySet();
+    if (expectedState == null && actualState == null) {
+      return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.irrelevant()));
     }
-    return Set.of("Expected bookingCancellationStatus '%s' but found '%s'"
+    if (Objects.equals(actualState, expectedState)) {
+      return ConformanceCheckResult.simple(Collections.emptySet());
+    }
+    return ConformanceCheckResult.simple(Set.of("Expected bookingCancellationStatus '%s' but found '%s'"
       .formatted(
         Objects.requireNonNullElse(expectedState, UNSET_MARKER),
-        Objects.requireNonNullElse(actualState, UNSET_MARKER)));
+        Objects.requireNonNullElse(actualState, UNSET_MARKER))));
   }
 
-  protected Set<String> ensureFeedbacksIsPresent(JsonNode responsePayload) {
+  protected ConformanceCheckResult ensureFeedbacksIsPresent(JsonNode responsePayload) {
     String bookingStatus = responsePayload.path("bookingStatus").asText(null);
     Set<String> errors = new HashSet<>();
     boolean isPendingUpdate = BookingState.PENDING_UPDATE.name().equals(bookingStatus);
     boolean isPendingAmendment = BookingState.PENDING_AMENDMENT.name().equals(bookingStatus);
-    if ((isPendingUpdate || isPendingAmendment)
-        && (responsePayload.path(FEEDBACKS).isMissingNode()
-            || responsePayload.path(FEEDBACKS).isEmpty())) {
+    if (!isPendingUpdate && !isPendingAmendment) {
+      return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.irrelevant()));
+    }
+    if (responsePayload.path(FEEDBACKS).isMissingNode()
+        || responsePayload.path(FEEDBACKS).isEmpty()) {
       errors.add("feedbacks property is required in the booking state %s".formatted(bookingStatus));
     }
-    return errors;
+    return ConformanceCheckResult.simple(errors);
   }
 
-  protected Set<String> ensureFeedbackSeverityAndCodeCompliance(JsonNode responsePayload) {
+  protected ConformanceCheckResult ensureFeedbackSeverityAndCodeCompliance(
+      JsonNode responsePayload) {
     Set<String> errors = new HashSet<>();
     JsonNode feedbacks = responsePayload.path(FEEDBACKS);
-    if (feedbacks.isArray()) {
-      for (JsonNode feedback : feedbacks) {
-        String severity = feedback.path("severity").asText(null);
-        String code = feedback.path("code").asText(null);
-        if (!BookingDataSets.FEEDBACKS_SEVERITY.contains(severity)) {
-          errors.add("Invalid feedback severity: " + severity);
-        }
-        if (!BookingDataSets.FEEDBACKS_CODE.contains(code)) {
-          errors.add("Invalid feedback code: " + code);
-        }
+    if (JsonUtil.isMissingOrEmpty(feedbacks)) {
+      return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.irrelevant()));
+    }
+    for (JsonNode feedback : feedbacks) {
+      String severity = feedback.path("severity").asText(null);
+      String code = feedback.path("code").asText(null);
+      if (!BookingDataSets.FEEDBACKS_SEVERITY.contains(severity)) {
+        errors.add("Invalid feedback severity: " + severity);
+      }
+      if (!BookingDataSets.FEEDBACKS_CODE.contains(code)) {
+        errors.add("Invalid feedback code: " + code);
       }
     }
-    return errors;
+    return ConformanceCheckResult.simple(errors);
   }
 }
