@@ -22,6 +22,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mockito;
 
 class JsonAttributeTest {
@@ -38,8 +39,13 @@ class JsonAttributeTest {
         }
 
         @Override
-        public Set<String> validate(JsonNode body) {
-          return Collections.emptySet();
+        public boolean isRelevant() {
+          return true;
+        }
+
+        @Override
+        public ConformanceCheckResult validate(JsonNode body) {
+          return ConformanceCheckResult.simple(Collections.emptySet());
         }
       };
 
@@ -115,10 +121,12 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.mustBePresent(JsonPointer.compile("/test"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
     assertFalse(
         JsonAttribute.mustBePresent(JsonPointer.compile("/nonexistent"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -132,6 +140,7 @@ class JsonAttributeTest {
                 JsonAttribute.isNotNull(JsonPointer.compile("/test")),
                 JsonAttribute.mustBePresent(JsonPointer.compile("/test2")))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
 
     assertFalse(
@@ -140,16 +149,21 @@ class JsonAttributeTest {
                 JsonAttribute.isNotNull(JsonPointer.compile("/test")),
                 JsonAttribute.mustBePresent(JsonPointer.compile("/test3")))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
 
-    // Test when initial condition is false
-    assertTrue(
-        JsonAttribute.ifThen(
-                "Test ifThen with initial condition false",
-                JsonAttribute.isNotNull(JsonPointer.compile("/test3")),
-                JsonAttribute.mustBePresent(JsonPointer.compile("/test2")))
-            .validate(objectNode, "")
-            .isEmpty());
+    // Test when initial condition is false so check is irrelevant
+    var irrelevantResult =
+        (ConformanceCheckResult.ErrorsWithRelevance)
+            JsonAttribute.ifThen(
+                    "Test ifThen with initial condition false",
+                    JsonAttribute.isNotNull(JsonPointer.compile("/test3")),
+                    JsonAttribute.mustBePresent(JsonPointer.compile("/test2")))
+                .validate(objectNode, "");
+    assertEquals(1, irrelevantResult.errors().size());
+    assertEquals(
+        ConformanceErrorSeverity.IRRELEVANT,
+        irrelevantResult.errors().iterator().next().severity());
   }
 
   static Stream<Arguments> testIsNotNullArgs() {
@@ -176,10 +190,12 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.mustBeNotNull(JsonPointer.compile("/test"), reason)
             .validate(objectNode)
+            .getErrorMessages()
             .isEmpty());
     assertFalse(
         JsonAttribute.mustBeNotNull(JsonPointer.compile("/test1"), reason)
             .validate(objectNode)
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -190,21 +206,25 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.mustEqual(JsonPointer.compile("/test"), "test")
             .validate(objectNode)
+            .getErrorMessages()
             .isEmpty());
     assertFalse(
         JsonAttribute.mustEqual(JsonPointer.compile("/test"), "test1")
             .validate(objectNode)
+            .getErrorMessages()
             .isEmpty());
     Supplier<String> supplier = () -> "test";
 
     assertTrue(
         JsonAttribute.mustEqual(JsonPointer.compile("/test"), supplier)
             .validate(objectNode)
+            .getErrorMessages()
             .isEmpty());
     supplier = () -> "test1";
     assertFalse(
         JsonAttribute.mustEqual(JsonPointer.compile("/test"), supplier)
             .validate(objectNode)
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -215,10 +235,12 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.path("test", JsonAttribute.matchedMustBePresent())
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
     assertFalse(
         JsonAttribute.path("testFalse", JsonAttribute.matchedMustBePresent())
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -241,27 +263,119 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.presenceImpliesOtherField("test", "test1")
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
+
     assertFalse(
         JsonAttribute.presenceImpliesOtherField("test", "test3")
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
   @Test
-  void testAllIndividualMatchesMustBeValid() {
+  void testPresenceImpliesOtherField_Irrelevant() {
     objectNode.put("test", "test");
-    arrayNode.add(objectNode);
+    objectNode.put("test1", "test1");
+
+    var irrelevantResult =
+        (ConformanceCheckResult.ErrorsWithRelevance)
+            JsonAttribute.presenceImpliesOtherField("test2", "test1").validate(objectNode, "");
+
+    assertEquals(1, irrelevantResult.errors().size());
+    assertEquals(
+        ConformanceErrorSeverity.IRRELEVANT,
+        irrelevantResult.errors().iterator().next().severity());
+  }
+
+  @ParameterizedTest
+  @ValueSource(
+      strings = {
+              "array.*",
+              "array.*.element",
+              "array.*.otherElement",
+      })
+  void testAllIndividualMatchesMustBeIrrelevant_(String path) {
+    objectNode.set("array", arrayNode);
 
     String name = "test";
     Consumer<MultiAttributeValidator> consumer =
-        multiAttributeValidator -> multiAttributeValidator.submitAllMatching("test.*");
-    JsonContentMatchedValidation subvalidation = (a, b) -> Set.of();
+        multiAttributeValidator -> multiAttributeValidator.submitAllMatching(path);
+    JsonContentMatchedValidation subValidation =
+        (a, b) -> {
+          if (a.asText().equals("first")) {
+            return ConformanceCheckResult.simple(Collections.emptySet());
+          }
+          return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.error("Invalid")));
+        };
+
+    Set<ConformanceError> errors =
+        ((ConformanceCheckResult.ErrorsWithRelevance)
+                JsonAttribute.allIndividualMatchesMustBeValid(name, consumer, subValidation)
+                    .validate(objectNode, ""))
+            .errors();
+
+    assertEquals(1, errors.size());
+    assertEquals(ConformanceErrorSeverity.IRRELEVANT, errors.iterator().next().severity());
+  }
+
+  @ParameterizedTest
+  @ValueSource(
+      strings = {
+        "array",
+        "array.*",
+        "array.*.element",
+      })
+  void testAllIndividualMatchesMustBeValid(String path) {
+    var firstElement = JsonNodeFactory.instance.objectNode().put("element", "first");
+    var secondElement = JsonNodeFactory.instance.objectNode().put("element", "second");
+    arrayNode.add(firstElement);
+    arrayNode.add(secondElement);
+    objectNode.set("array", arrayNode);
+
+    String name = "test";
+    Consumer<MultiAttributeValidator> consumer =
+        multiAttributeValidator -> multiAttributeValidator.submitAllMatching(path);
+    JsonContentMatchedValidation subValidation = (a, b) -> ConformanceCheckResult.simple(Set.of());
 
     assertTrue(
-        JsonAttribute.allIndividualMatchesMustBeValid(name, consumer, subvalidation)
-            .validate(arrayNode, "")
+        JsonAttribute.allIndividualMatchesMustBeValid(name, consumer, subValidation)
+            .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
+  }
+
+  @ParameterizedTest
+  @ValueSource(strings = {
+          "array.*",
+          "array.*.element",
+          "notArray",
+  })
+  void testAllIndividualMatchesMustBeInvalid(String path) {
+    var firstElement = JsonNodeFactory.instance.objectNode().put("element", "first");
+    var secondElement = JsonNodeFactory.instance.objectNode().put("element", "second");
+    arrayNode.add(firstElement);
+    arrayNode.add(secondElement);
+    objectNode.set("array", arrayNode);
+
+    String name = "test";
+    Consumer<MultiAttributeValidator> consumer =
+        multiAttributeValidator -> multiAttributeValidator.submitAllMatching(path);
+    JsonContentMatchedValidation subValidation =
+        (a, b) -> {
+          if (a.asText().equals("first")) {
+            return ConformanceCheckResult.simple(Collections.emptySet());
+          }
+          return ConformanceCheckResult.withRelevance(Set.of(ConformanceError.error("Invalid")));
+        };
+
+    var result =
+        (ConformanceCheckResult.ErrorsWithRelevance)
+            JsonAttribute.allIndividualMatchesMustBeValid(name, consumer, subValidation)
+                .validate(objectNode, "");
+    assertFalse(result.getErrorMessages().isEmpty());
+    assertEquals(1, result.getErrorMessages().size());
+    assertEquals(ConformanceErrorSeverity.ERROR, result.errors().iterator().next().severity());
   }
 
   @Test
@@ -271,7 +385,11 @@ class JsonAttributeTest {
     arrayNode.add(objectNode);
 
     Function<JsonNode, String> keyFunction = jsonNode -> jsonNode.path("test").asText(null);
-    assertFalse(JsonAttribute.unique("test", keyFunction).validate(arrayNode, "").isEmpty());
+    assertFalse(
+        JsonAttribute.unique("test", keyFunction)
+            .validate(arrayNode, "")
+            .getErrorMessages()
+            .isEmpty());
   }
 
   @Test
@@ -281,6 +399,7 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.path("test", JsonAttribute.matchedMustEqual(() -> "test"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -291,6 +410,7 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.at(JsonPointer.compile("/test"), JsonAttribute.matchedMustEqual(() -> "test"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -304,14 +424,24 @@ class JsonAttributeTest {
     objectNode.put("test", "test");
     arrayNode.add(objectNode);
 
-    assertTrue(JsonAttribute.matchedMustBeNonEmpty().validate(objectNode, "").isEmpty());
-    assertTrue(JsonAttribute.matchedMustBeNonEmpty().validate(arrayNode, "").isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMustBeNonEmpty()
+            .validate(objectNode, "")
+            .getErrorMessages()
+            .isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMustBeNonEmpty().validate(arrayNode, "").getErrorMessages().isEmpty());
 
     objectNode.removeAll();
-    assertFalse(JsonAttribute.matchedMustBeNonEmpty().validate(objectNode, "").isEmpty());
+    assertFalse(
+        JsonAttribute.matchedMustBeNonEmpty()
+            .validate(objectNode, "")
+            .getErrorMessages()
+            .isEmpty());
 
     arrayNode.removeAll();
-    assertFalse(JsonAttribute.matchedMustBeNonEmpty().validate(arrayNode, "").isEmpty());
+    assertFalse(
+        JsonAttribute.matchedMustBeNonEmpty().validate(arrayNode, "").getErrorMessages().isEmpty());
   }
 
   @Test
@@ -319,9 +449,13 @@ class JsonAttributeTest {
     objectNode.put("test", "test");
     objectNode.putNull("test1");
 
-    assertTrue(JsonAttribute.matchedMustBeNotNull().validate(objectNode, "").isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMustBeNotNull().validate(objectNode, "").getErrorMessages().isEmpty());
     assertFalse(
-        JsonAttribute.matchedMustBeNotNull().validate(objectNode.get("test1"), "").isEmpty());
+        JsonAttribute.matchedMustBeNotNull()
+            .validate(objectNode.get("test1"), "")
+            .getErrorMessages()
+            .isEmpty());
   }
 
   @Test
@@ -329,17 +463,32 @@ class JsonAttributeTest {
     objectNode.put("test", true);
     objectNode.put("testFalse", false);
 
-    assertTrue(JsonAttribute.matchedMustBeTrue().validate(objectNode.get("test"), "").isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMustBeTrue()
+            .validate(objectNode.get("test"), "")
+            .getErrorMessages()
+            .isEmpty());
     assertFalse(
-        JsonAttribute.matchedMustBeTrue().validate(objectNode.get("testFalse"), "").isEmpty());
+        JsonAttribute.matchedMustBeTrue()
+            .validate(objectNode.get("testFalse"), "")
+            .getErrorMessages()
+            .isEmpty());
   }
 
   @Test
   void testMatchedMaximum() {
     objectNode.put("test", 1);
 
-    assertTrue(JsonAttribute.matchedMaximum(2).validate(objectNode.get("test"), "").isEmpty());
-    assertFalse(JsonAttribute.matchedMaximum(0).validate(objectNode.get("test"), "").isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMaximum(2)
+            .validate(objectNode.get("test"), "")
+            .getErrorMessages()
+            .isEmpty());
+    assertFalse(
+        JsonAttribute.matchedMaximum(0)
+            .validate(objectNode.get("test"), "")
+            .getErrorMessages()
+            .isEmpty());
   }
 
   @Test
@@ -347,9 +496,16 @@ class JsonAttributeTest {
     JsonNode emptyNode = objectMapper.createObjectNode();
     ObjectNode nonEmptyNode = objectMapper.createObjectNode().put("test", "test");
 
-    assertTrue(JsonAttribute.matchedMustBeAbsent().validate(emptyNode.path("test1"), "").isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMustBeAbsent()
+            .validate(emptyNode.path("test1"), "")
+            .getErrorMessages()
+            .isEmpty());
     assertFalse(
-        JsonAttribute.matchedMustBeAbsent().validate(nonEmptyNode.get("test"), "").isEmpty());
+        JsonAttribute.matchedMustBeAbsent()
+            .validate(nonEmptyNode.get("test"), "")
+            .getErrorMessages()
+            .isEmpty());
   }
 
   @Test
@@ -357,9 +513,11 @@ class JsonAttributeTest {
     objectNode.put("test", "test");
     arrayNode.add(objectNode);
 
-    assertTrue(JsonAttribute.matchedMaxLength(1).validate(arrayNode, "").isEmpty());
+    assertTrue(
+        JsonAttribute.matchedMaxLength(1).validate(arrayNode, "").getErrorMessages().isEmpty());
     arrayNode.add(objectNode);
-    assertFalse(JsonAttribute.matchedMaxLength(1).validate(arrayNode, "").isEmpty());
+    assertFalse(
+        JsonAttribute.matchedMaxLength(1).validate(arrayNode, "").getErrorMessages().isEmpty());
   }
 
   @Test
@@ -380,6 +538,7 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.mustBeDatasetKeywordIfPresent(JsonPointer.compile("/test"), dataset)
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -390,11 +549,13 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.atMostOneOf(JsonPointer.compile("/test"), JsonPointer.compile("/test1"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
     objectNode.put("test1", "test1");
     assertFalse(
         JsonAttribute.atMostOneOf(JsonPointer.compile("/test"), JsonPointer.compile("/test1"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -405,11 +566,13 @@ class JsonAttributeTest {
     assertTrue(
         JsonAttribute.atLeastOneOf(JsonPointer.compile("/test"), JsonPointer.compile("/test1"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
     objectNode.removeAll();
     assertFalse(
         JsonAttribute.atLeastOneOf(JsonPointer.compile("/test"), JsonPointer.compile("/test1"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -418,21 +581,21 @@ class JsonAttributeTest {
     objectNode.put("test", true);
     objectNode.put("test2", "value");
 
-    JsonRebaseableContentCheck check =
+    JsonRebasableContentCheck check =
         JsonAttribute.ifThenElse(
             "Test ifThenElse",
             JsonAttribute.isTrue(JsonPointer.compile("/test")),
-            (body, contextPath) -> Set.of("then applied"),
-            (body, contextPath) -> Set.of("else applied"));
+            (body, contextPath) -> ConformanceCheckResult.simple(Set.of("then applied")),
+            (body, contextPath) -> ConformanceCheckResult.simple(Set.of("else applied")));
 
     // Test when condition is true
-    Set<String> result = check.validate(objectNode, "");
+    Set<String> result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.contains("then applied"));
     assertFalse(result.contains("else applied"));
 
     // Test when condition is false
     objectNode.put("test", false);
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertFalse(result.contains("then applied"));
     assertTrue(result.contains("else applied"));
   }
@@ -448,13 +611,17 @@ class JsonAttributeTest {
             JsonAttribute.matchedMustBePresent());
 
     // Test when condition is true
-    Set<String> result = check.validate(objectNode, "");
+    Set<String> result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when condition is false
     objectNode.put("test", false);
-    result = check.validate(objectNode, "");
-    assertTrue(result.isEmpty());
+    var irrelevantResult =
+        (ConformanceCheckResult.ErrorsWithRelevance) check.validate(objectNode, "");
+    assertEquals(1, irrelevantResult.errors().size());
+    assertEquals(
+        ConformanceErrorSeverity.IRRELEVANT,
+        irrelevantResult.errors().iterator().next().severity());
   }
 
   @Test
@@ -469,19 +636,19 @@ class JsonAttributeTest {
             JsonAttribute.matchedMustBeAbsent());
 
     // Test when condition is true
-    Set<String> result = check.validate(objectNode, "");
+    Set<String> result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when condition is false
     objectNode.put("test", false);
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertFalse(result.isEmpty());
 
     // Test when condition is true but validation fails
     objectNode.put("test", true);
     objectNode.remove("test2");
     objectNode.remove("test");
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertFalse(result.isEmpty());
   }
 
@@ -491,11 +658,17 @@ class JsonAttributeTest {
 
     // Test when the node is present
     assertTrue(
-        JsonAttribute.matchedMustBePresent().validate(objectNode.path("test"), "").isEmpty());
+        JsonAttribute.matchedMustBePresent()
+            .validate(objectNode.path("test"), "")
+            .getErrorMessages()
+            .isEmpty());
 
     // Test when the node is missing
     assertFalse(
-        JsonAttribute.matchedMustBePresent().validate(objectNode.path("missing"), "").isEmpty());
+        JsonAttribute.matchedMustBePresent()
+            .validate(objectNode.path("missing"), "")
+            .getErrorMessages()
+            .isEmpty());
   }
 
   @Test
@@ -510,12 +683,12 @@ class JsonAttributeTest {
         JsonAttribute.matchedMustBeDatasetKeywordIfPresent(dataset);
 
     // Test when the keyword is valid
-    Set<String> result = validation.validate(objectNode.path("test"), "test");
+    Set<String> result = validation.validate(objectNode.path("test"), "test").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when the keyword is invalid
     objectNode.put("test", "invalidKeyword");
-    result = validation.validate(objectNode.path("test"), "test");
+    result = validation.validate(objectNode.path("test"), "test").getErrorMessages();
     assertFalse(result.isEmpty());
     assertTrue(
         result.contains(
@@ -530,12 +703,14 @@ class JsonAttributeTest {
     assertFalse(
         JsonAttribute.mustBeAbsent(JsonPointer.compile("/test"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
 
     // Test when the node is absent
     assertTrue(
         JsonAttribute.mustBeAbsent(JsonPointer.compile("/missing"))
             .validate(objectNode, "")
+            .getErrorMessages()
             .isEmpty());
   }
 
@@ -547,12 +722,12 @@ class JsonAttributeTest {
     JsonContentMatchedValidation validation = JsonAttribute.matchedMustEqual(expectedValueSupplier);
 
     // Test when the value matches
-    Set<String> result = validation.validate(objectNode.path("test"), "test");
+    Set<String> result = validation.validate(objectNode.path("test"), "test").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when the value does not match
     objectNode.put("test", "unexpectedValue");
-    result = validation.validate(objectNode.path("test"), "test");
+    result = validation.validate(objectNode.path("test"), "test").getErrorMessages();
     assertFalse(result.isEmpty());
     assertTrue(
         result.contains("The value of 'test' was 'unexpectedValue' instead of 'expectedValue'"));
@@ -610,12 +785,12 @@ class JsonAttributeTest {
     JsonContentMatchedValidation validation = JsonAttribute.atLeastOneOfMatched(ptrSupplier);
 
     // Test when at least one field is present
-    Set<String> result = validation.validate(objectNode, "");
+    Set<String> result = validation.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when no fields are present
     objectNode.removeAll();
-    result = validation.validate(objectNode, "");
+    result = validation.validate(objectNode, "").getErrorMessages();
     assertFalse(result.isEmpty());
     assertTrue(result.contains("At least one of the following must be present: test1, test2"));
   }
@@ -625,23 +800,23 @@ class JsonAttributeTest {
     objectNode.put("test1", "value1");
     objectNode.put("test2", "value2");
 
-    JsonRebaseableContentCheck check =
+    JsonRebasableContentCheck check =
         JsonAttribute.allOrNoneArePresent(
             JsonPointer.compile("/test1"), JsonPointer.compile("/test2"));
 
     // Test when both fields are present
-    Set<String> result = check.validate(objectNode, "");
+    Set<String> result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when one field is missing
     objectNode.remove("test2");
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertFalse(result.isEmpty());
     assertTrue(result.contains("'test1' and 'test2' must both be present or absent"));
 
     // Test when both fields are missing
     objectNode.remove("test1");
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
   }
 
@@ -649,22 +824,22 @@ class JsonAttributeTest {
   void testXOrFields() {
     objectNode.put("field1", "value1");
 
-    JsonRebaseableContentCheck check =
+    JsonRebasableContentCheck check =
         JsonAttribute.xOrFields(JsonPointer.compile("/field1"), JsonPointer.compile("/field2"));
 
     // Test when only one field is present
-    Set<String> result = check.validate(objectNode, "");
+    Set<String> result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
 
     // Test when both fields are present
     objectNode.put("field2", "value2");
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertFalse(result.isEmpty());
     assertTrue(result.contains("Either one of them can be present, but not both : field1, field2"));
 
     // Test when none of the fields are present
     objectNode.removeAll();
-    result = check.validate(objectNode, "");
+    result = check.validate(objectNode, "").getErrorMessages();
     assertTrue(result.isEmpty());
   }
 
@@ -673,22 +848,22 @@ class JsonAttributeTest {
     JsonNode validNode = JsonNodeFactory.instance.objectNode().put("test", "value");
     JsonNode invalidNode = JsonNodeFactory.instance.objectNode().put("test", "invalid");
 
-    Function<JsonNode, Set<String>> validator =
+    Function<JsonNode, ConformanceCheckResult> validator =
         node -> {
           if ("value".equals(node.path("test").asText())) {
-            return Collections.emptySet();
+            return ConformanceCheckResult.simple(Collections.emptySet());
           }
-          return Set.of("Invalid value for 'test'");
+          return ConformanceCheckResult.simple(Set.of("Invalid value for 'test'"));
         };
 
     JsonContentCheck customCheck =
         JsonAttribute.customValidator("Custom Validator Test", validator);
 
     // Test with valid node
-    assertTrue(customCheck.validate(validNode).isEmpty());
+    assertTrue(customCheck.validate(validNode).getErrorMessages().isEmpty());
 
     // Test with invalid node
-    Set<String> result = customCheck.validate(invalidNode);
+    Set<String> result = customCheck.validate(invalidNode).getErrorMessages();
     assertFalse(result.isEmpty());
     assertTrue(result.contains("Invalid value for 'test'"));
   }
